# falcon-comms

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
include/falcon-comms/: autotuner_comms.hpp  commands_definitions.hpp  export.h  natsManager.hpp  routine_comms.hpp  runtime_comms.hpp
src/: autotuner_comms.cpp  commands.cpp  natsManager.cpp  routine_comms.cpp  runtime_comms.cpp
tests/: CMakeLists.txt
tests/test_utils/: TestFixture.hpp
